UI Fix v1.3.7: Improve contrast on active admin tab hover

--- a/admin/css/woobooster-admin.css
+++ b/admin/css/woobooster-admin.css
@@ -206,6 +206,11 @@
   box-shadow: var(--wb-shadow-2);
 }
 
+.wb-sidebar__item--active a:hover {
+  background: var(--wb-color-brand-background-hover);
+  color: #fff !important;
+}
+
 .wb-sidebar__icon {
   display: flex;
   width: 20px;
